--- a/my second website - wedding/style.css
+++ b/my second website - wedding/style.css
@@ -5,7 +5,7 @@ footer{
     display: block;
 }
 
-body{
+.index{
     background-image: url(image1.JPG);
     background-repeat: no-repeat;
     background-size: cover;
